# GeneViz

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MicroSynViz_core.py  README-test.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README.md
example-test/: Geneviz.py
example-test/Cross-species_comparison/: run_example_cross.sh
example-test/Single-species_comparison/: GeneViz.py  example_output_blast.txt  genome_subset.fa.fai  run_example.sh
example-test/Single‑species comparison/: example_output_genes.fasta  gene_subset.gff  genome_subset.fa  run_example.sh  te_subset.gff
example_data/LinkView_Visualizer/: README.md  gene_pairs.tsv  speciesA.lens
geneviz/: GD_Classifier.py  GeneViz.py  LinkView_Visualizer.py  MicroSynteny_Plotter.py  TE_Annotator.py  __init__.py
microsynviz/: GD_Classifier.py  LinkView_Visualizer.py  MicroSynViz.py  MicroSynteny_Plotter.py  TE_Annotator.py  __init__.py  __main__.py  core.py
tests/: test_core.py  test_import.py
