[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MicroSynViz"
version = "1.0.0"
description = "Visualizing Pairwise Genomic Microsynteny Within and Between Species"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Yiyong Zhao", email = "yiyong.zhao@yale.edu" }
]
keywords = ["genomics", "synteny", "microsynteny", "gene duplication", "visualization", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib>=3.5",
  "biopython",
  "cairosvg",
]

[project.scripts]
MicroSynViz = "microsynviz.MicroSynViz:main"

[project.urls]
Homepage = "https://github.com/YiyongZhao/MicroSynViz"
Issues = "https://github.com/YiyongZhao/MicroSynViz/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["microsynviz*"]
